# chatprop

./: .gitignore  CLAUDE.md  DAILY-WORKFLOW.md  DISCORD_TOKEN_SETUP.md  RAILWAY_DEPLOYMENT.md  RAILWAY_DEPLOYMENT_GUIDE.md  ambiguous-list.md  export-8-14.sh  export-today.sh  nixpacks.toml  railway.toml  recursive-checks.md  stop.sh
.railway/: cron.Dockerfile  rust.Dockerfile  web.Dockerfile
cron-worker/: Dockerfile.cron
discord-monitor/: .env.example  Dockerfile  README.md  backfill.js  ecosystem.config.js  monitor.js  package-lock.json  package.json  setup.js  ticker-extractor-service.js
discord-viewer/: .dockerignore  .gitignore  Dockerfile.web  alphadocs.md  auto-process.js  backfill-v2-today.js  batch-extractor.js  batch-process-today.js  check-message.js  create-blacklist-table.sql  create-message-trigger.sql  create-stocks-table.sql  debug-extractor.js  debug-omnd.js  extractor-logic.md  extractor-logic.yaml  migrate-to-v2.js  package-lock.json  package.json  process-discord-export.js  process-messages-v2.js  process-real-tickers.js  process-tickers.js  real-time-extractor-notify.js  real-time-extractor.js  server.js  setup-database.sql  setup-new-db.sh  show-live-prices.js  test-current-prices.js  test-databento-live.js  test-databento.js  test-db-timestamps.js  test-live-api.js  test-live-prices.js  test-new-db.js  test-real-message.js  test-single-extractor.js  ticker-extractor-v3.js  tsconfig.json  (+2 more)
discord-viewer/databento-live-test/: Cargo.toml  Dockerfile  Dockerfile.rust  start.sh
discord-viewer/databento-live-test/src/: main.rs
scripts/: manage.sh
(+48 files in other folders)
