[package]
name = "databento-live-test"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros", "json", "ws"] }
http = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "gzip", "brotli", "zstd", "rustls-tls"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
base64 = "0.22"

databento = "0.14"
tokio-tungstenite = "0.21"
futures-util = "0.3"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
